--- a/style.css
+++ b/style.css
@@ -1,116 +1,128 @@
-
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     font-size: 20px;
 }
 
 
 
-header{
+header {
     display: flex;
     justify-content: space-between;
     padding: 10px;
 }
 
-#icon{
+#icon {
     text-decoration: none;
     color: black;
 }
 
 
-.nav-button{
-display: none;
-position: absolute;
-right:10px;
-background: none;
-border: 0px;
-    
-}
-
-.nav-button img{
-    height: 30px;
-}
-
-
-.close-nav{
+.nav-button {
     display: none;
     position: absolute;
-    right:10px;
+    right: 10px;
     background: none;
     border: 0px;
-    
+
 }
 
-.close-nav img{
+.nav-button img {
     height: 30px;
 }
 
 
-.menu{
+.close-nav {
+    display: none;
+    position: absolute;
+    right: 10px;
+    background: none;
+    border: 0px;
+
+}
+
+.close-nav img {
+    height: 30px;
+}
+
+
+.menu {
     display: flex;
     list-style: none;
     text-decoration: none;
 }
 
 
-.menu a{
+.menu a {
     color: black;
     text-decoration: none;
     padding: 0px 10px 0px 10px;
 }
 
 
-.menu a:hover{
-    color: rgba(163, 196, 230,1);
+.menu a:hover {
+    color: rgba(163, 196, 230, 1);
     text-decoration: none;
     padding: 0px 10px 0px 10px;
 }
 
 
 
-#first-section{
+#first-section {
     height: 250px;
-    background-color:rgba(163, 196, 230,1);
+    background-color: rgba(163, 196, 230, 1);
     margin: 0px auto;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 
-#first-section h1{
+#first-section h1 {
     display: flex;
     justify-content: center;
     margin: 0px auto;
     align-items: center;
-    height:100%;
+    height: 100%;
     font-size: 2rem;
     white-space: normal;
     text-align: center;
 }
 
 
-#second-section{
-    padding:10px;
-    width:1200px;
-    justify-content: center;
-    display: grid;
-    grid-template-rows: repeat(3 auto);
-    grid-template-columns: repeat(6 auto);
-    grid-auto-flow: row dense;
-    gap: 20px;
-    margin-top: 30px;
+#second-section {
+    margin-top: 40px;
     margin-left: auto;
-    margin-right: auto;
-} 
+    margin-right: auto; 
+    padding: 10px;
+    width: 1200px;
+    justify-content: center;
+
+}
 
 
+#small {
 
-.small-box{
-    height:100%;
-    background-color: rgba(151, 190, 230,0.5);
-    height:50px;
+    display: grid;
+    grid-template-rows: 1;
+    grid-template-columns: repeat(6 1fr);
+    gap:20px;
+    margin-bottom: 20px;
+}
+
+#big {
+
+    display: grid;
+    grid-template-rows: repeat(2 auto); 
+    grid-template-columns: repeat(6 1fr); 
+    gap:20px;
+}
+
+.small-box {
+    height: 100%;
+    background-color: rgba(151, 190, 230, 0.5);
+    height: 50px;
     display: flex;
+
     align-items: center;
     overflow: hidden;
     white-space: nowrap;
@@ -118,109 +130,62 @@ border: 0px;
 }
 
 
-.small-box img{
-    height:100%;
+.small-box img {
+    height: 100%;
     width: 80px;
     object-fit: cover;
 }
 
-.big-box{
+
+.small-box p{
+    text-align: center;
+    width: 200px;
+    align-items: center;
+    object-fit: cover;
+    margin: 0;
+}
+
+
+.big-box {
     position: relative;
 }
 
 
-.big-box img{
+.big-box img {
     object-fit: cover;
-    height:100%;
+    height: 100%;
     width: 100%;
 }
 
-.text-block{
+.text-block {
     position: absolute;
     bottom: 0px;
     width: 100%;
     text-align: center;
-    background-color: rgba(256, 256, 256,0.7);
+    background-color: rgba(256, 256, 256, 0.7);
 }
 
-.text-block p{
-    padding-left:2px;
+.text-block p {
+    padding-left: 2px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 
 
-
-
-#promotion1,#promotion2,#promotion3{
+#promotion1,
+#promotion2,
+#promotion3 {
     text-align: center;
     white-space: pre-wrap;
     grid-column: auto /span 2;
-    grid-row:1/2;
-}
-
-
-.title1{
-    grid-column:auto /span 2;
-    grid-row: 2/3;
-}
-
-
-.title2,.title3,.title4,.title5{
-    grid-column: auto/ span 1;
-    grid-row: 2/3;
-}
-
-
-.title6{
-    grid-column:auto /span 2;
-    grid-row: 3/4;
-}
-
-
-.title7,.title8,.title9,.title10{
-    grid-column: auto/span 1;
-    grid-row: 3/4;
-}
-
-.section{
-    padding:10px;
-    width:1200px;
-    justify-content: center;
-    display: grid;
-    grid-template-rows: repeat(2,auto);
-    grid-template-columns: repeat(6,auto);
-    grid-auto-flow: row dense;
-    gap: 20px;
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;   
-}
-
-.next1{
-    grid-column: auto / span 2;
     grid-row: 1/2;
 }
 
-.next2,.next3,.next4.next5{
-    grid-column: auto / span 1;
-    grid-row: 1/2;
-}
-
-.next6{
-    grid-column: auto / span 2;
-    grid-row: 2/3;
-}
-
-.next7,.next8,.next9,.next10{
-    grid-column: auto / span 1;
-    grid-row: 2/3;
-}
 
 
 
-#load-button{
+#load-button {
     display: flex;
     justify-content: center;
     margin: 30px auto;
@@ -228,79 +193,56 @@ border: 0px;
     border: 1px solid rgba(109, 122, 151, 0.8);
     border-radius: 10px;
     cursor: pointer;
-    background-color:rgba(232, 237, 247, 0.8);
+    background-color: rgba(232, 237, 247, 0.8);
 }
 
 
-#load-button:active{
-    background-color:rgba(109, 122, 151, 0.8);
+#load-button:active {
+    background-color: rgba(109, 122, 151, 0.8);
 }
 
-@media screen and (max-width:1200px) and (min-width: 601px){
-    #second-section{
+@media screen and (max-width:1200px) and (min-width: 601px) {
+    #second-section {
         width: 90%;
-        grid-template-rows: repeat(5,auto);
-        grid-template-columns: repeat(4,auto);
-        gap: 20px;
-        margin-top:30px;      
     }
 
-    
+    #small {
+        display: grid;
+        grid-template-rows: 2;
+        grid-template-columns: repeat(4 1fr);
+        gap:20px;
+        margin-bottom: 20px;
+    }
 
-    #promotion1,#promotion2{
+    #big {
+        display: grid;
+        grid-template-rows: repeat(3 auto);
+        grid-template-columns: repeat(4 1fr);
+        gap:20px;
+    }
+
+
+    #promotion1{
         text-align: center;
-        grid-column: auto/ span 2;
-        grid-row:1/2;
-
-    }
-        
-    
-    #promotion3{
-        grid-column: auto /span 4;
-        grid-row:2/3;
-    }
-    
-    
-    .title1,.title2,.title3,.title4{
-        grid-column: auto / span 1;
-        grid-row: 3/4;
-    }
-    
-    
-    .title5,.title6,.title7,.title8{
-        grid-column: auto / span 1;
-        grid-row: 4/5;
-    }
-    
-    .title9,.title10{
-        grid-column: auto / span 2;
-        grid-row: 5/6;
-    }
-
-    .section{
-        width: 90%;
-        grid-template-rows: repeat(3,auto);
-        grid-template-columns: repeat(4,auto);
-        gap: 20px;
-        margin-top:30px;     
-
-    }
-
-    .next1,.next2,.next3,.next4{
-        grid-column: auto / span 1;
+        grid-column: 1/ span 2;
         grid-row: 1/2;
+
     }
-    
-    
-    .next5,.next6,.next7,.next8{
-        grid-column: auto / span 1;
+
+    #promotion2 {
+        text-align: center;
+        grid-column: 3/ span 2;
+        grid-row: 1/2;
+
+    }
+
+    #promotion3 {
+        grid-column: auto /span 4;
         grid-row: 2/3;
     }
-    
-    .next9,.next10{
-        grid-column: auto / span 2;
-        grid-row: 3/4;
-    }
+
+
+
     .small-box {
         font-size: 0.8rem;
     }
@@ -308,73 +250,80 @@ border: 0px;
     .text-block p {
         font-size: 0.8rem;
     }
-    
+
 }
 
 @media screen and (max-width: 600px) {
-    #second-section{
+    #second-section {
         width: 90%;
         display: flex;
         flex-direction: column;
         margin-top: 20px;
     }
 
-    
-    .section{
-        width: 90%;
+    #small {
+
         display: flex;
         flex-direction: column;
-        margin-top: 20px;   
+        margin-bottom: 20px;
+    }
+
+    #big {
+
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 20px;
     }
 
     .text-block {
         height: 30px;
     }
 
-    .nav-button{
+    .nav-button {
         display: block;
         position: absolute;
-        right:10px;
-        
+        right: 10px;
+
     }
 
-    .close-nav.is-active{
+    .close-nav.is-active {
         display: block;
         position: absolute;
-        right:10px;
-        z-index:2;
+        right: 10px;
+        z-index: 2;
     }
-    .menu{
+
+    .menu {
         display: none;
         position: absolute;
         flex-direction: column;
-        top:0px;
+        top: 0px;
         bottom: 0px;
-        right:0px;
-        padding: 40px ;
-        background-color: rgba(256, 256, 256,1);
-        box-shadow: 0px 0px 5px gray;    
+        right: 0px;
+        padding: 40px;
+        background-color: rgba(256, 256, 256, 1);
+        box-shadow: 0px 0px 5px gray;
         list-style: none;
         text-decoration: none;
-        z-index:1;
-        
+        z-index: 1;
+
     }
 
-    .menu li{
+    .menu li {
         margin: 20px;
     }
-    
-    .is-active{
+
+    .is-active {
         display: block;
     }
 
-    
-    #first-section h1{
+
+    #first-section h1 {
         display: flex;
         justify-content: center;
         margin: 0px auto;
         align-items: center;
-        height:100%;
+        height: 100%;
         font-size: 1.4rem;
         text-align: center;
         white-space: normal;
@@ -389,4 +338,3 @@ border: 0px;
     }
 
 }
-
